<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    android:background="#fff"
    >
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <include
            android:id="@+id/join_backtitle"
            layout="@layout/home_title_double"
            ></include>
    </RelativeLayout>
    <View
    android:layout_width="match_parent"
    android:layout_height="6px"
    android:background="#f7f7f7"
    android:layout_marginTop="20px"
    />
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="26px"
    android:orientation="horizontal"
    >
        <TextView
            style="@style/BlackText"
        android:text="@string/company_name"
        android:textSize="26px"
            android:layout_marginLeft="20px"
        />
        <EditText
        android:layout_width="552px"
        android:layout_height="56px"
        android:layout_marginLeft="26px"
        android:textColor="#cccccc"
         android:background="@drawable/merchant_joinbc"
        android:hint="@string/join_input_companyname"
        android:textSize="24px"
        android:paddingLeft="16px"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="58px"
        android:orientation="horizontal"
    >
        <TextView
            style="@style/BlackText"
            android:text="@string/contact"
            android:textSize="26px"
            android:layout_marginLeft="20px"
        />
        <EditText
            android:id="@+id/editText"
            android:layout_width="552px"
            android:layout_height="56px"
            android:layout_marginLeft="52px"
            android:textColor="#cccccc"
            android:background="@drawable/merchant_joinbc"
            android:hint="@string/join_input_contact"
            android:paddingLeft="16px"
            android:textSize="24px"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63px"
        android:layout_marginTop="58px"
        android:orientation="horizontal"
    >
        <TextView
            style="@style/BlackText"
            android:text="@string/contact_way"
            android:textSize="26px"
            android:paddingTop="14px"
            android:layout_marginLeft="20px"
        />
        <RelativeLayout
        android:layout_width="552px"
        android:layout_height="56px"
        android:layout_marginLeft="26px"
        android:background="@drawable/merchant_joinbc"
        >
            <EditText
                android:layout_width="552px"
                android:layout_height="56px"
                android:background="@null"
                android:hint="@string/join_input_contactway"
                android:textSize="24px"
                android:textColor="#cccccc"
                android:paddingLeft="16px"

            />
            <Button
            android:layout_width="120px"
            android:layout_height="30px"
            android:textSize="20px"
            android:textColor="#e93e38"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12px"
            android:layout_marginTop="13px"
            android:background="@drawable/merchant_gain_securitycode"
            android:text="@string/gain_securitycode"
            />
        </RelativeLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="58px"
        android:orientation="horizontal"
    >
        <TextView
            style="@style/BlackText"
            android:text="@string/securitycode"
            android:textSize="26px"
            android:layout_marginLeft="20px"
        />

        <EditText
            android:layout_width="552px"
            android:layout_height="56px"
            android:layout_marginLeft="52px"
            android:background="@drawable/merchant_joinbc"
            android:hint="@string/join_input_securitycode"
            android:textSize="24px"
            android:textColor="#cccccc"
            android:paddingLeft="16px"
            android:id="@+id/editText2" />
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f7f7f7"
    >
        <Button
            android:id="@+id/join_comit"
            android:layout_height="70px"
            android:layout_width="680px"
            android:layout_marginTop="62px"
            android:background="@drawable/but_yuanjiao"
            android:text="提交"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textSize="28px"
        />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90px"
        android:paddingLeft="20px"
        android:paddingRight="20px"
        android:textColor="#2a2a2a"
        android:textSize="30px"
        android:text="@string/relation"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20px"
            android:paddingRight="20px"
            android:textColor="#2a2a2a"
            android:textSize="30px"
            android:layout_marginTop="20px"
            android:layout_gravity="center"
            android:text="@string/relation2"
        />
    </LinearLayout>
</LinearLayout>
