<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:background="#f7f7f7" android:weightSum="1">
    <com.zhy.autolayout.AutoRelativeLayout
    android:layout_width="330px"
    android:layout_height="330px"
    android:background="#ffffff"
    >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sucess_item_icon"
            android:layout_centerInParent="true"
            android:src="@drawable/pic"
        />
    </com.zhy.autolayout.AutoRelativeLayout>
    <TextView
    android:id="@+id/sucess_item_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="26px"
    android:layout_marginLeft="22px"
    android:text="@string/sucess_name"
    android:textSize="24px"
    android:textColor="#363636"
    />
    <TextView
        android:id="@+id/sucess_item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:layout_marginLeft="22px"
        android:text="@string/sucess_desc"
        android:textSize="24px"
        android:textColor="#363636"
    />
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/sucess_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22px"
            android:layout_marginTop="27px"
            android:text="@string/sucess_price"
            android:textColor="#2a2a2a"
            android:textSize="26px"
        />
        <Button
            android:id="@+id/immediately_buy"
            android:layout_width="100px"
            android:layout_height="36px"
            android:background="@drawable/success_itembtn"
            android:textColor="#ffffff"
            android:textSize="18px"
            android:layout_marginTop="27px"
            android:text="@string/immediately_buy"
            android:layout_marginLeft="156px"
        />
    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>
