<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sales_refund"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ssmk.module.shoppingcar.order.SalesReturnActivity">
    <include
        android:id="@+id/top_include"
        layout="@layout/top_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></include>

    <RelativeLayout
        android:id="@+id/relayout2"
        android:layout_below="@+id/top_include"
        android:layout_width="680px"
        android:layout_height="206px"
        android:layout_marginLeft="20px"
        android:layout_marginTop="20px"
        android:background="@drawable/dibu"
        >
        <ImageView
            android:id="@+id/apply_refund_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginTop="27px"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="28px"
            android:background="@drawable/a17"
            />

        <TextView
            android:id="@+id/apply_refund_shopname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:layout_toRightOf="@+id/apply_refund_iv"
            android:layout_marginLeft="25px"
            android:lineSpacingExtra="10px"
            android:text="每个人都有潜在的能量，只是很容易被习惯所掩盖， 被时间所迷离,被惰性所消磨."
            android:textSize="22px"
            android:textColor="#2a2a2a"
            />

        <TextView
            android:id="@+id/apply_refund_shopinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/apply_refund_iv"
            android:layout_below="@+id/apply_refund_shopname"
            android:layout_marginTop="20px"
            android:layout_marginLeft="25px"
            android:text="化妆品净含量：200g"
            android:textSize="20px"
            android:textColor="#666666"
            />

        <TextView
            android:id="@+id/apply_refund_shopprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/apply_refund_iv"
            android:layout_below="@+id/apply_refund_shopinfo"
            android:layout_marginTop="12px"
            android:layout_marginLeft="25px"
            android:text="￥455.9"
            android:textSize="22px"
            android:textColor="#bb0c0c"/>

        <TextView
            android:id="@+id/apply_refund_shopnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="X1"
            android:textSize="18px"
            android:textColor="#666666"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="42px"
            android:layout_marginRight="20px"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relayout3"
        android:layout_below="@+id/relayout2"
        android:layout_width="680px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:background="@drawable/dibu"
        android:layout_marginTop="20px"
        >
        <TextView
            android:id="@+id/only_refund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24px"
            android:layout_marginLeft="20px"
            android:textSize="26px"
            android:textColor="#2a2a2a"
            android:text="@string/only_refund"
            />

        <TextView
            android:layout_below="@+id/only_refund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14px"
            android:layout_marginLeft="20px"
            android:textSize="20px"
            android:textColor="#2a2a2a"
            android:text="@string/no_received"
            android:layout_marginBottom="25px"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relayout4"
        android:layout_below="@+id/relayout3"
        android:layout_width="680px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:background="@drawable/dibu"
        android:layout_marginTop="20px"
        >
        <TextView
            android:id="@+id/sales_refund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24px"
            android:layout_marginLeft="20px"
            android:textSize="26px"
            android:textColor="#2a2a2a"
            android:text="@string/sales_refund"
            />

        <TextView
            android:layout_below="@+id/sales_refund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14px"
            android:layout_marginLeft="20px"
            android:layout_marginBottom="25px"
            android:textSize="20px"
            android:textColor="#2a2a2a"
            android:text="@string/have_received"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relayout5"
        android:layout_below="@+id/relayout4"
        android:layout_width="680px"
        android:layout_height="294px"
        android:layout_marginLeft="20px"
        android:background="@drawable/dibu"
        android:layout_marginTop="10px"
        >
        <TextView
            android:id="@+id/refund_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36px"
            android:layout_marginLeft="26px"
            android:textSize="26px"
            android:textColor="#2a2a2a"
            android:text="@string/refund_money"
            />

        <TextView
            android:id="@+id/refund_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36px"
            android:layout_toRightOf="@+id/refund_money"
            android:layout_marginLeft="14px"
            android:textSize="26px"
            android:textColor="#e93a38"
            android:text="￥1,600.00"
            />

        <TextView
            android:layout_below="@+id/refund_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34px"
            android:layout_marginLeft="26px"
            android:textSize="26px"
            android:textColor="#2a2a2a"
            android:text="@string/goods_reason"
            />

        <RelativeLayout
            android:layout_width="520px"
            android:layout_height="160px"
            android:layout_below="@+id/refund_price"
            android:layout_alignStart="@+id/refund_price"
            android:layout_marginTop="34px"
            android:background="#f7f7f7">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:layout_marginLeft="20px"
            android:textSize="24px"
            android:textColor="#666666"
            android:background="@null"
            android:hint="@string/refund_reason"
            />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="680px"
            android:layout_height="70px"
            android:layout_centerInParent="true"
            android:background="@drawable/black_btn"
            android:text="提交"
            android:textColor="#ffffff"
            android:textSize="28px"
            />
    </RelativeLayout>
</RelativeLayout>
