<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_order_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ssmk.module.shoppingcar.order.WaitPayActivity">

    <include
        android:id="@+id/top_include"
        layout="@layout/top_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></include>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/orderdetails_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_include"
        android:layout_above="@+id/relayoutBottom"
        ></android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/relayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc"/>
        <TextView
            android:id="@+id/should_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40px"
            android:text="@string/should_money"
            android:textColor="#2a2a2a"
            android:textSize="20px"/>

        <TextView
            android:id="@+id/orderdetails_should_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/should_money"
            android:text="￥1,636.00"
            android:textColor="#2a2a2a"
            android:textSize="24px"/>

        <Button
            android:id="@+id/orderdetails_cancel"
            android:layout_width="200px"
            android:layout_height="70px"
            android:layout_centerVertical="true"
            android:layout_marginRight="12px"
            android:background="@drawable/white_button"
            android:layout_toLeftOf="@+id/orderdetails_submit"
            android:text="@string/cancel_order"
            android:textColor="#2a2a2a"
            android:textSize="28px"/>

        <Button
            android:id="@+id/orderdetails_submit"
            android:layout_width="200px"
            android:layout_height="70px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20px"
            android:background="@drawable/shop_red_button"
            android:text="@string/submit_order"
            android:textColor="#ffffff"
            android:textSize="28px"/>
    </RelativeLayout>
</RelativeLayout>
